feat(airlines): add `fields` query param to meaningful endpoints
