# src/controllers/flights.js
@@ -1,10 +1,15 @@
+const { mapAirlineFieldsFromQuery } = require('../services/property-mapping');
 const { flattenObject } = require('../services/utils');
 const { Http404Error, HttpBadGatewayError } = require('../errors');
 
 const find = async (req, res, next) => {
+  let fieldsQuery = (req.query.fields && req.query.fields.split(',')) || [];
+  fieldsQuery = mapAirlineFieldsFromQuery(fieldsQuery);
   let { flightId } = req.params;
   try {
-    let plainAirline = await res.locals.wt.airline.toPlainObject(['flightsUri.items.flightInstancesUri']);
+    const fieldsToResolve = fieldsQuery.indexOf('flightInstancesUri') > -1 ? ['flightsUri.items.flightInstancesUri'] : ['flightsUri.items'];
+    const depth = fieldsQuery.indexOf('flightInstancesUri') > -1 ? undefined : 2;
+    let plainAirline = await res.locals.wt.airline.toPlainObject(fieldsToResolve, depth);
     if (!plainAirline.dataUri.contents.flightsUri) {
       return next(new Http404Error('flightNotFound', 'Flights not found'));
     }
@@ -13,7 +18,7 @@ const find = async (req, res, next) => {
     if (!flight) {
       return next(new Http404Error('flightNotFound', 'Flight not found'));
     }
-    let flattenedFlight = flattenObject(flight, ['flightInstancesUri']);
+    const flattenedFlight = flattenObject(flight, fieldsQuery);
     flight.flightInstances = flattenedFlight.flightInstancesUri;
     delete flight.flightInstancesUri;
 
@@ -24,14 +29,18 @@ const find = async (req, res, next) => {
 };
 
 const findAll = async (req, res, next) => {
+  let fieldsQuery = (req.query.fields && req.query.fields.split(',')) || [];
+  fieldsQuery = mapAirlineFieldsFromQuery(fieldsQuery);
   try {
-    let plainAirline = await res.locals.wt.airline.toPlainObject(['flightsUri.items.flightInstancesUri']);
+    const fieldsToResolve = fieldsQuery.indexOf('flightInstancesUri') > -1 ? ['flightsUri.items.flightInstancesUri'] : ['flightsUri.items'];
+    const depth = fieldsQuery.indexOf('flightInstancesUri') > -1 ? undefined : 2;
+    let plainAirline = await res.locals.wt.airline.toPlainObject(fieldsToResolve, depth);
     if (!plainAirline.dataUri.contents.flightsUri) {
       return next(new Http404Error('flightNotFound', 'Flights not found'));
     }
     const flights = [];
     for (let flight of plainAirline.dataUri.contents.flightsUri.contents.items) {
-      let flattenedFlight = flattenObject(flight, ['flightInstancesUri']);
+      let flattenedFlight = flattenObject(flight, fieldsQuery);
       flight.flightInstances = flattenedFlight.flightInstancesUri;
       delete flight.flightInstancesUri;
       flights.push(flight);
